--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Boxes</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="fave icon" href="background.jpg">
 </head>
 <body>
    <h2>My journey to being a Full Stack Developer.</h2>
